[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"

[[bin]]
name = "2024-day01-part1"
path = "src/bin/2024/day01/part1.rs"

[[bin]]
name = "2024-day01-part2"
path = "src/bin/2024/day01/part2.rs"

[[bin]]
name = "2024-day02-part1"
path = "src/bin/2024/day02/part1.rs"

[[bin]]
name = "2024-day02-part2"
path = "src/bin/2024/day02/part2.rs"

[[bin]]
name = "2024-day03-part1"
path = "src/bin/2024/day03/part1.rs"

[[bin]]
name = "2024-day03-part2"
path = "src/bin/2024/day03/part2.rs"

[[bin]]
name = "2024-day04-part1"
path = "src/bin/2024/day04/part1.rs"

[[bin]]
name = "2024-day04-part2"
path = "src/bin/2024/day04/part2.rs"

[[bin]]
name = "2024-day05-part1"
path = "src/bin/2024/day05/part1.rs"

[[bin]]
name = "2024-day05-part2"
path = "src/bin/2024/day05/part2.rs"
